@@ -933,6 +933,7 @@ ${SIPDOMAIN}         * SIP destination domain of an inbound call (if appropriate
 ${SIPFROMDOMAIN}       Set SIP domain on outbound calls
 ${SIPUSERAGENT}      * SIP user agent (deprecated)
 ${SIPURI}            * SIP uri
+${SIP_MAX_FORWARDS}    Set the value of the Max-Forwards header for outbound call
 ${SIP_CODEC}           Set the SIP codec for an inbound call
 ${SIP_CODEC_INBOUND}   Set the SIP codec for an inbound call
 ${SIP_CODEC_OUTBOUND}  Set the SIP codec for an outbound call
